   -- adjusted default weapon length according to soldier's maxhits, preventing creatures from getting
      an automatic reduction of their combat strength due to weapon length.
   -- fixed a bug in the spell description of ENGRAVE_RUNES_OF_WARDING.
   -- fixed a bug with faction passwords in parsing and report handling with certain GM utilities.
   -- added an observation variable to Farsight that is set at cast time to circumvent problems
      of referencing units during report write-out that have been killed since casting.
   -- fixed ShowSpecial() to correctly show the protection of shield items as personal, not
      army-wide shields (taken from Bradley's Nylandor code).
   -- added Ant's GM's code of conduct into the GAMEMASTER file.
   -- fixed the bug where NOMOUNT type weapons (pikes) were never used.
   -- removed all traces of BANKS.
   -- added FLEETS. Ships are now handled as items, either belonging to a fleet object or to
      a units itemlist as unfinished ships. Also, finally Summon Wind is handled in a neat way.
      There's a bonus to fleet speeds for summon wind mages (who can bundle their efforts) and
      for highly skilled sailors sailing in good ships. Also changed the skillshow for S_SUMMON_WIND
      and the genrules (just scantily) to take the ship info from both items and objects. Ships _may_
      still be objects but then cannot act as parts of fleets and this is discouraged.
   	  Unfinished ships may not be given (except given away completely), but finished ship may be transferred
   	  between the owners of fleets.
   -- modified GIVEing of ships so that new fleets get created dynamically, added code for
      build helpers in shipbuilding, and cleaned up a bug in the removal of empty fleets
   -- changed fleet reports so that single-ship fleets show the ship type as <object type>
      rather than "Fleet". Also no ship list is displayed for them.	  
   	  ToDo: armored galleon bonus...?
   