@@ -1068,6 +1068,8 @@ void ARegion::Readin(Ainfile *f, AList *facs, ATL_VER v)
 		temp->Readin(f, facs, v);
 		objects.Add(temp);
 	}
+	fleetalias = 1;
+	newfleets.clear();
 }
 
 int ARegion::CanMakeAdv(Faction *fac, int item)
@@ -1865,6 +1867,26 @@ int ARegion::CountWMons()
 		}
 	}
 	return count;
+}
+
+/* New Fleet objects are stored in the newfleets
+ * map for resolving aliases in the Enter NEW phase.
+ */
+void ARegion::AddFleet(Object * fleet)
+{
+	objects.Add(fleet);
+	Awrite(AString("Setting up fleet alias #") + fleetalias + ": " + fleet->num);
+	newfleets.insert(make_pair(fleetalias++, fleet->num));
+	
+}
+
+int ARegion::ResolveFleetAlias(int alias)
+{
+	map<int, int>::iterator f;
+	f = newfleets.find(alias);
+	Awrite(AString("Resolving Fleet Alias #") + alias + ": " + f->second);
+	if(f == newfleets.end()) return -1;
+	return f->second;
 }
 
 ARegionList::ARegionList()
