@@ -60,7 +60,7 @@ int allowedTacticiansSize = sizeof(ag) / sizeof(ag[0]);
 
 static GameDefs g = {
 	"Kingdoms",	 // RULESET_NAME
-	MAKE_ATL_VER( 5, 0, 0 ), // RULESET_VERSION
+	MAKE_ATL_VER( 1, 0, 0 ), // RULESET_VERSION
 
 	2, /* FOOT_SPEED */
 	4, /* HORSE_SPEED */
